--- a/app/styles/modules/_global.scss
+++ b/app/styles/modules/_global.scss
@@ -147,3 +147,10 @@ p {
 .nymphette {
   font-family: "nymphette";
 }
+
+.web-container {
+  position: relative;
+  z-index: 2;
+  background: white;
+  overflow: hidden;
+}
