--- a/app/styles/modules/_carousel.scss
+++ b/app/styles/modules/_carousel.scss
@@ -10,6 +10,7 @@
     padding-top: 100px;
   }
   @include media-breakpoint-down(lg) {
+    background-color: black;
     padding-top: 0;
   }
   >div {
@@ -23,44 +24,42 @@
       width: 60%;
     }
     @include media-breakpoint-down(lg) {
+      overflow: initial;
+      position: initial;
       width: 100%;
     }
   }
 }
 
 .main-carousel {
-  height: 339px;
   @include media-breakpoint-widescreen {
     height: 450px;
   }
   @include media-breakpoint-xl {
-    height: 455px;
+    height: 330px;
   }
   @include media-breakpoint-down(lg) {
-    height: 455px;
+    height: 320px;
   }
   @include media-breakpoint-down(sm) {
-    height: 230px;
+    height: 180px;
   }
   .carousel-cell {
-    width: 801px;
-    height: 455px;
+    position: relative;
+    width: 600px;
     @include media-breakpoint-widescreen {
       height: 450px;
     }
     @include media-breakpoint-xl {
-      height: 455px;
+      height: 330px;
     }
     @include media-breakpoint-down(lg) {
-      height: 455px;
+      height: 320px;
     }
     @include media-breakpoint-down(sm) {
-      width: 400px;
-      height: 230px;
+      width: 320px;
+      height: 180px;
     }
-  }
-  .carousel-data {
-    position: relative;
     .carousel-header {
       position: absolute;
       top: 0;
@@ -74,37 +73,31 @@
       z-index: 1;
       @include media-breakpoint-xl {
         background-color: rgba(0, 0, 0, 0.6);
-        padding: 20px;
+        // padding: 20px;
       }
       @include media-breakpoint-down(sm) {
-        margin-left: 20px;
-        padding: 5px 20px;
         font-size: 20px;
       }
     }
     .video-element {
-      width: 101%;
-      height: 455px;
-      object-fit: cover;
-      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 449px;
       @include media-breakpoint-widescreen {
         height: 450px;
       }
       @include media-breakpoint-xl {
-        height: 455px;
+        height: 330px;
       }
       @include media-breakpoint-down(lg) {
-        height: 455px;
+        height: 320px;
       }
       @include media-breakpoint-down(sm) {
-        width: 400px;
-        height: 220px;
+        width: 320px;
+        height: 180px;
       }
-    }
-    .carousel-href {
-      position: absolute;
-      width: 100%;
-      z-index: -1;
     }
   }
 }
