--- a/app/styles/modules/_cover.scss
+++ b/app/styles/modules/_cover.scss
@@ -61,8 +61,8 @@
       height: 100%;
     }
     @include media-breakpoint-down(sm) {
-      height: auto;
-      width: 100%;
+      height: 75%;
+      width: 200%;
       position: absolute;
       top: 50px;
       left: 50%;
@@ -71,7 +71,8 @@
   }
   &__container {
     position: absolute;
-    top: 4%;
+    // top: 4%;
+    top: 350px;
     left: 0;
     width: 100%;
     height: 600px;
