--- a/app/styles/modules/_modal.scss
+++ b/app/styles/modules/_modal.scss
@@ -1,4 +1,5 @@
 .swal2-container {
+  background-color: transparent !important;
   >div {
     height: auto !important;
     width: 650px !important;
@@ -63,3 +64,7 @@
     }
   }
 }
+
+// body.swal2-iosfix {
+//   top: 0px !important;
+// }
