--- a/app/styles/modules/_parallax.scss
+++ b/app/styles/modules/_parallax.scss
@@ -34,6 +34,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  @media (max-width: 1024px) {
+    display: none;
+  }
 }
 
 #parallax1,
@@ -45,9 +48,12 @@
   height: 103%;
   left: 50%;
   top: 30%;
-  @media (max-width: 1000px) {
-    width: 100%;
-    height: 100%;
+  // @media (max-width: 1000px) {
+  //   width: 100%;
+  //   height: 100%;
+  // }
+  @media (max-width: 1024px) {
+    display: none;
   }
 }
 
