Added new styles to modules

--- a/app/styles/modules/_global.scss
+++ b/app/styles/modules/_global.scss
@@ -120,14 +120,14 @@ a {
 
 body {
   font-family: "oswald";
-  position: relative;
-  height: auto;
-  width: 100%;
-  margin: 0;
+  // position: relative;
+  // height: auto;
+  // width: 100%;
+  // margin: 0;
 }
 
 div {
-  height: 100%;
+  // height: 100%;
   width: 100%;
 }
 
@@ -149,8 +149,8 @@ p {
 }
 
 .web-container {
-  position: relative;
-  z-index: 2;
+  // position: relative;
+  // z-index: 2;
   background: white;
-  overflow: hidden;
+  // overflow: hidden;
 }
