--- a/app/styles/modules/_carousel.scss
+++ b/app/styles/modules/_carousel.scss
@@ -2,7 +2,9 @@
   padding: 0;
   background-color: #e6e6e6;
   height: auto;
+  position: relative;
   z-index: 1;
+  overflow: hidden;
   @include media-breakpoint-widescreen {
     padding-top: 150px;
   }
