--- a/app/styles/modules/_clapboard.scss
+++ b/app/styles/modules/_clapboard.scss
@@ -1,9 +1,9 @@
 .clapboard {
   background-color: white;
   position: relative;
-  padding: 0;
-  height: auto;
   z-index: 1;
+  padding: 0;
+  height: 100vh;
   @include media-breakpoint-widescreen {
     padding-top: 150px;
     padding-bottom: 0;
@@ -15,6 +15,7 @@
   @include media-breakpoint-down(lg) {
     padding-top: 50px;
     padding-bottom: 50px;
+    height: 80vh;
   }
   &__inner {
     position: relative;
@@ -24,6 +25,7 @@
       text-align: center;
       position: relative;
       z-index: -1;
+      height: auto;
       @include media-breakpoint-down(lg) {
         margin: 0;
       }
