--- a/app/styles/modules/_cover.scss
+++ b/app/styles/modules/_cover.scss
@@ -1,9 +1,9 @@
 .cover {
   position: relative;
+  z-index: 0;
   padding: 0;
   overflow: hidden;
   background-color: black;
-  z-index: -1;
   @include media-breakpoint-widescreen {
     height: 100vh;
   }
@@ -120,18 +120,15 @@
         width: auto;
         left: 8%;
       }
-      @include media-breakpoint-only(lg) {
-        top: 0;
-        left: 0;
-      }
-      @include media-breakpoint-only(md) {
+      @include media-breakpoint-down(lg) {
+        position: initial;
         top: 0;
         left: 0;
       }
       @include media-breakpoint-down(sm) {
         top: 0;
         left: 50%;
-        transform: translateX(-50%);
+        // transform: translateX(-50%);
       }
       &--logo {
         @include media-breakpoint-widescreen {
