--- a/app/styles/modules/_description.scss
+++ b/app/styles/modules/_description.scss
@@ -3,6 +3,8 @@
   background-color: #e6e6e6;
   padding: 0;
   height: auto;
+  position: relative;
+  z-index: 1;
   @include media-breakpoint-widescreen {
     padding-top: 150px;
     padding-bottom: 150px;
