--- a/app/styles/modules/_questioning.scss
+++ b/app/styles/modules/_questioning.scss
@@ -2,6 +2,8 @@
   padding: 0;
   background-color: white;
   height: auto;
+  position: relative;
+  z-index: 1;
   @include media-breakpoint-widescreen {
     padding-top: 150px;
     padding-bottom: 150px;
