--- a/app/styles/modules/_references.scss
+++ b/app/styles/modules/_references.scss
@@ -2,6 +2,7 @@
   background-color: #e6e6e6;
   padding: 0;
   height: auto;
+  position: relative;
   z-index: 1;
   @include media-breakpoint-widescreen {
     padding-top: 100px;
