--- a/app/styles/modules/_description.scss
+++ b/app/styles/modules/_description.scss
@@ -86,6 +86,13 @@
       @include media-breakpoint-only(sm) {
         width: 100%;
       }
+      iframe {
+        width: 100%;
+        height: 400px;
+        @include media-breakpoint-down(sm) {
+          height: 200px;
+        }
+      }
     }
   }
 }
