--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -199,6 +199,11 @@
               margin: 0;
               transform: translateX(10px);
             }
+
+            @media (min-width: 1200px) and (max-width: 1399px) {
+              display: none;
+            }
+            
             @media (max-width: 1199px) {
               font-size: 2rem;
               font-weight: 600;
@@ -245,6 +250,7 @@
         color: #474a7b;
         transform: translateX(0);
         transition: all .3s ease-in-out;
+        display: block;
       }
       .active i {
         color: #474a7b;
@@ -325,6 +331,7 @@
         transition: all .3s ease-in-out;
         &__header {
           color: white;
+          margin-bottom: 20px;
         }
         &__text {
           color: white;
