--- a/app/styles/modules/_parallax.scss
+++ b/app/styles/modules/_parallax.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
   position: relative;
   // z-index: 1;
-  @media (max-width: 1024px) and (orientation: portrait) {
+  @media (max-width: 1024px) {
     display: none;
   }
 }
@@ -34,7 +34,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  @media (max-width: 1024px) and (orientation: portrait) {
+  @media (max-width: 1024px) {
     display: none;
   }
 }
@@ -52,7 +52,7 @@
   //   width: 100%;
   //   height: 100%;
   // }
-  @media (max-width: 1024px) and (orientation: portrait) {
+  @media (max-width: 1024px) {
     display: none;
   }
 }
