--- a/app/styles/modules/_description.scss
+++ b/app/styles/modules/_description.scss
@@ -1,15 +1,14 @@
 .description {
-  // display: none;
   background-color: #e6e6e6;
   padding: 0;
   height: auto;
   position: relative;
   z-index: 1;
-  @include media-breakpoint-widescreen {
+  @include media-breakpoint-up(xl) {
     padding-top: 150px;
     padding-bottom: 150px;
   }
-  @include media-breakpoint-xl {
+  @include media-breakpoint-down(xl) {
     padding-top: 100px;
     padding-bottom: 100px;
   }
@@ -29,10 +28,10 @@
       border: 1px solid black;
       margin-top: 25px;
       margin-bottom: 35px;
-      @include media-breakpoint-widescreen {
+      @include media-breakpoint-up(xl) {
         width: 40%
       }
-      @include media-breakpoint-xl {
+      @include media-breakpoint-down(xl) {
         width: 30%;
       }
       @include media-breakpoint-down(lg) {
@@ -52,10 +51,10 @@
       margin: auto;
       text-align: center;
       padding-bottom: 56px;
-      @include media-breakpoint-widescreen {
+      @include media-breakpoint-up(xl) {
         width: 80%;
       }
-      @include media-breakpoint-xl {
+      @include media-breakpoint-down(xl) {
         width: 60%;
       }
       @include media-breakpoint-only(lg) {
@@ -72,9 +71,11 @@
       }
     }
     &--media {
-      width: 100%;
       margin: 0 auto;
-      @include media-breakpoint-xl {
+      @include media-breakpoint-up(xl) {
+        width: 80%;
+      }
+      @include media-breakpoint-down(xl) {
         width: 80%;
       }
       @include media-breakpoint-only(lg) {
@@ -83,7 +84,7 @@
       @include media-breakpoint-only(md) {
         width: 90%;
       }
-      @include media-breakpoint-only(sm) {
+      @include media-breakpoint-down(sm) {
         width: 100%;
       }
       iframe {
