--- a/app/styles/modules/_questioning.scss
+++ b/app/styles/modules/_questioning.scss
@@ -4,11 +4,11 @@
   height: auto;
   position: relative;
   z-index: 1;
-  @include media-breakpoint-widescreen {
+  @include media-breakpoint-up(xl) {
     padding-top: 150px;
     padding-bottom: 150px;
   }
-  @include media-breakpoint-xl {
+  @include media-breakpoint-down(xl) {
     padding-top: 100px;
     padding-bottom: 100px;
   }
@@ -19,10 +19,10 @@
   .container {
     width: auto;
     position: relative;
-    @include media-breakpoint-widescreen {
-      max-width: 900px;
+    @include media-breakpoint-up(xl) {
+      max-width: 800px;
     }
-    @include media-breakpoint-xl {
+    @include media-breakpoint-down(xl) {
       max-width: 700px;
     }
     @include media-breakpoint-down(lg) {
@@ -49,10 +49,10 @@
   &__section {
     margin-bottom: 30px;
     text-align: center;
-    @include media-breakpoint-widescreen {
+    @include media-breakpoint-up(xl) {
       margin-bottom: 80px;
     }
-    @include media-breakpoint-xl {
+    @include media-breakpoint-down(xl) {
       margin-bottom: 50px;
     }
     &--title-style {
@@ -65,10 +65,10 @@
       border: 1px solid;
       margin-top: 5px;
       margin-bottom: 25px;
-      @include media-breakpoint-widescreen {
+      @include media-breakpoint-up(xl) {
         width: 6%;
       }
-      @include media-breakpoint-xl {
+      @include media-breakpoint-down(xl) {
         width: 10%;
       }
       @include media-breakpoint-down(lg) {
@@ -107,7 +107,7 @@
   background: #fff;
   padding: 0;
   font-size: 4rem;
-  @include media-breakpoint-widescreen {
+  @include media-breakpoint-up(xl) {
     font-size: 5rem;
   }
 }
@@ -131,7 +131,7 @@
 
 .decoration span.left-bottom,
 .decoration span.right-bottom {
-  bottom: -5px;
+  bottom: -30px;
 }
 
 @include media-breakpoint-down(sm) {
