--- a/app/styles/modules/_references.scss
+++ b/app/styles/modules/_references.scss
@@ -4,11 +4,11 @@
   height: auto;
   position: relative;
   z-index: 1;
-  @include media-breakpoint-widescreen {
+  @include media-breakpoint-up(xl) {
     padding-top: 100px;
     padding-bottom: 0;
   }
-  @include media-breakpoint-xl {
+  @include media-breakpoint-down(xl) {
     padding-top: 50px;
     padding-bottom: 0;
   }
