--- a/app/styles/modules/_team.scss
+++ b/app/styles/modules/_team.scss
@@ -4,17 +4,11 @@
   height: auto;
   position: relative;
   z-index: 1;
-  >.container {
-    padding: 0;
-    >.row {
-      margin: 0;
-    }
-  }
-  @include media-breakpoint-widescreen {
+  @include media-breakpoint-up(xl) {
     padding-top: 150px;
     padding-bottom: 150px;
   }
-  @include media-breakpoint-xl {
+  @include media-breakpoint-down(xl) {
     padding-top: 150px;
     padding-bottom: 150px;
   }
@@ -87,6 +81,12 @@
           line-height: 1.5;
         }
       }
+    }
+  }
+  >.container {
+    padding: 0;
+    >.row {
+      margin: 0;
     }
   }
 }
