--- a/app/styles/modules/_clapboard.scss
+++ b/app/styles/modules/_clapboard.scss
@@ -1,34 +1,32 @@
 .clapboard {
   background-color: white;
   position: relative;
-  z-index: 1;
+  //z-index: 1;
   padding: 0;
   height: 100vh;
   @include media-breakpoint-up(xl) {
-    padding-top: 150px;
+    padding-top: 50px;
     padding-bottom: 0;
   }
   @include media-breakpoint-down(xl) {
-    padding-top: 120px;
+    padding-top: 50px;
     padding-bottom: 0;
   }
   @include media-breakpoint-down(lg) {
     padding-top: 50px;
     padding-bottom: 50px;
-    height: 80vh;
-  }
-  @include media-breakpoint-down(sm) {
     height: auto;
   }
   &__inner {
     position: relative;
-    z-index: 10;
+    z-index: 1;
     margin: 0 auto;
     &__title {
       text-align: center;
       position: relative;
       z-index: -1;
       height: auto;
+      margin: 0;
       @include media-breakpoint-down(lg) {
         margin: 0;
       }
@@ -72,9 +70,10 @@
         height: 800px;
       }
       @include media-breakpoint-down(lg) {
+        width: 100%;
+        height: auto;
         background: none;
         margin-top: 0;
-        height: initial;
       }
     }
     &__top {
@@ -83,9 +82,9 @@
       transform-origin: bottom left;
       transition: .1s transform linear;
       @include media-breakpoint-up(xl) {
-        width: 898px;
-        height: 60px;
-        top: 17.5%;
+        width: 1078px;
+        height: 80px;
+        top: 10.2%;
         left: 5%;
       }
       @include media-breakpoint-down(xl) {
@@ -108,7 +107,7 @@
       @include media-breakpoint-up(xl) {
         top: 30%;
         left: 50%;
-        width: 898px;
+        width: 1000px;
       }
       @include media-breakpoint-down(xl) {
         width: 1000px;
@@ -142,6 +141,7 @@
         margin-bottom: 30px;
       }
       @include media-breakpoint-only(lg) {
+        margin-bottom: 0;
         padding-top: 0;
         padding-bottom: 5px;
         min-height: 185px;
@@ -149,10 +149,14 @@
       }
       @include media-breakpoint-only(md) {
         padding-top: 0;
+        padding-bottom: 0;
+        margin-bottom: 0;
         background-color: white;
         height: 200px;
       }
       @include media-breakpoint-down(sm) {
+        margin-bottom: 0;
+        min-height: auto;
         background-color: white;
         padding-bottom: 30px;
         padding-top: 0;
@@ -213,12 +217,10 @@
     }
   }
   &__background {
+    height: 230px;
     position: absolute;
-    bottom: -1px;
+    bottom: 0;
     left: 0;
-    padding: 0;
-    height: 240px;
-    width: 100%;
     background-color: #e6e6e6;
     @include media-breakpoint-down(lg) {
       display: none;
