--- a/app/styles/modules/_cover.scss
+++ b/app/styles/modules/_cover.scss
@@ -4,12 +4,7 @@
   padding: 0;
   overflow: hidden;
   background-color: black;
-  @include media-breakpoint-widescreen {
-    height: 100vh;
-  }
-  @include media-breakpoint-xl {
-    height: 100vh;
-  }
+  height: 100vh;
   @include media-breakpoint-only(lg) {
     @media (orientation: landscape) {
       height: 75vh;
@@ -43,23 +38,8 @@
     top: 0;
     left: 0;
     z-index: 0;
-    object-fit: fill;
-    @include media-breakpoint-widescreen {
-      height: 100%;
-      object-fit: none;
-    }
-    @include media-breakpoint-xl {
-      height: 100%;
-      width: auto;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    @include media-breakpoint-only(lg) {
-      height: 100%;
-    }
-    @include media-breakpoint-only(md) {
-      height: 100%;
-    }
+    object-fit: contain;
+    height: 100%;
     @include media-breakpoint-down(sm) {
       height: 75%;
       width: 200%;
@@ -71,12 +51,10 @@
   }
   &__container {
     position: absolute;
-    // top: 4%;
-    top: 350px;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 600px;
-    overflow: hidden;
+    height: 500px;
     @include media-breakpoint-down(lg) {
       top: 0;
       @media (orientation: landscape) {
@@ -87,11 +65,9 @@
       }
     }
     @include media-breakpoint-down(md) {
-      top: 0;
       height: 50vh;
     }
     @include media-breakpoint-down(sm) {
-      top: 0;
       @media (orientation: landscape) {
         height: 800px;
       }
@@ -102,42 +78,22 @@
     &__content {
       position: absolute;
       pointer-events: none;
-      @include media-breakpoint-widescreen {
-        height: auto;
-        width: auto;
-        top: 0;
-        left: 33%;
-        transform: translateX(-50%);
-      }
-      @include media-breakpoint-xl {
-        height: auto;
-        width: auto;
-        top: 115px;
-        left: 17%;
-      }
-      @media (min-width: 1200px) and (max-width: 1399px) {
-        height: auto;
-        width: auto;
-        left: 8%;
-      }
+      height: auto;
+      width: auto;
+      top: 0;
+      left: 25%;
+      transform: translateX(-50%);
       @include media-breakpoint-down(lg) {
         position: initial;
-        top: 0;
         left: 0;
+        transform: none;
       }
       @include media-breakpoint-down(sm) {
-        top: 0;
         left: 50%;
-        // transform: translateX(-50%);
       }
       &--logo {
-        @include media-breakpoint-widescreen {
-          height: 100px;
-        }
-        @include media-breakpoint-xl {
-          height: 100px;
-        }
-        @include media-breakpoint-only(lg) {
+        height: 100px;
+        @include media-breakpoint-down(lg) {
           position: absolute;
           bottom: 10px;
           left: 10px;
@@ -145,14 +101,9 @@
           height: auto;
         }
         @include media-breakpoint-only(md) {
-          position: absolute;
-          bottom: 10px;
-          left: 10px;
           width: 48%;
-          height: auto;
         }
         @include media-breakpoint-down(sm) {
-          // height: 110px;
           position: absolute;
           bottom: 10px;
           left: 0;
@@ -167,10 +118,8 @@
         letter-spacing: 1px;
         font-size: 3.8rem;
         line-height: .9;
-        @include media-breakpoint-widescreen {
-          height: 56px;
-          font-size: 4rem;
-        }
+        height: 56px;
+        font-size: 4rem;
         @include media-breakpoint-down(lg) {
           display: none;
         }
@@ -181,9 +130,7 @@
         font-size: 28px;
         line-height: .9;
         letter-spacing: 2px;
-        @include media-breakpoint-widescreen {
-          font-size: 2.5rem;
-        }
+        font-size: 2.5rem;
         @include media-breakpoint-down(lg) {
           display: none;
         }
@@ -202,10 +149,10 @@
     &__arrow {
       position: absolute;
       left: 50%;
-      bottom: 35px;
       transform: translateX(-50%);
       width: auto;
       height: auto;
+      bottom: 5%;
       @include media-breakpoint-down(lg) {
         display: none;
       }
