--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -1,14 +1,16 @@
 #nav {
   height: auto;
-  @media (max-width: 1199px) and (orientation: portrait) {
-    height: 50vh;
-    width: 100%;
-    position: absolute;
-  }
-  @media (max-width: 1199px) and (orientation: landscape) {
-    height: 75vh;
-    width: 100%;
-    position: absolute;
+  @include media-breakpoint-down(lg) {
+    @media (orientation: portrait) {
+      height: 50vh;
+      width: 100%;
+      position: absolute;
+    }
+    @media (orientation: landscape) {
+      height: 75vh;
+      width: 100%;
+      position: absolute;
+    }
   }
   @include media-breakpoint-down(md) {
     height: 50vh;
@@ -30,15 +32,21 @@
     height: 100%;
   }
   .hamburger-menu {
-    @include media-breakpoint-widescreen {
-      position: absolute;
-      display: none;
+    position: absolute;
+    //display: none;
+    &.open span:nth-child(1) {
+      top: 18px;
+      transform: rotate(135deg);
     }
-    @media (min-width: 1200px) and (max-width: 1999px) {
-      position: absolute;
-      display: none;
+    &.open span:nth-child(2) {
+      opacity: 0;
+      left: -60px;
     }
-    @media (max-width: 1199px) {
+    &.open span:nth-child(3) {
+      top: 18px;
+      transform: rotate(-135deg);
+    }
+    @include media-breakpoint-down(lg) {
       width: 50px;
       height: 45px;
       position: absolute;
@@ -70,46 +78,21 @@
         top: 36px;
       }
     }
-    &.open span:nth-child(1) {
-      top: 18px;
-      transform: rotate(135deg);
-    }
-    &.open span:nth-child(2) {
-      opacity: 0;
-      left: -60px;
-    }
-    &.open span:nth-child(3) {
-      top: 18px;
-      transform: rotate(-135deg);
-    }
   }
   .navigation {
     z-index: 500;
     ul {
       border: none;
-      @include media-breakpoint-widescreen {
-        position: fixed;
-        transform: translateY(-50%);
-        margin: 0;
-        display: flex;
-        flex-direction: column !important;
-        list-style-type: none;
-        top: 50%;
-        width: auto;
-        right: 75px;
-      }
-      @media (min-width: 1200px) and (max-width: 1999px) {
-        position: fixed;
-        transform: translateY(-50%);
-        margin: 0;
-        display: flex;
-        flex-direction: column !important;
-        list-style-type: none;
-        top: 50%;
-        right: 45px;
-        width: auto;
-      }
-      @media (max-width: 1199px) {
+      position: fixed;
+      transform: translateY(-50%);
+      margin: 0;
+      display: flex;
+      flex-direction: column !important;
+      list-style-type: none;
+      top: 50%;
+      width: auto;
+      right: 75px;
+      @include media-breakpoint-down(lg) {
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap !important;
@@ -126,6 +109,8 @@
         opacity: 0;
         visibility: hidden;
         transition: all .3s ease-in-out;
+        transform: none;
+        align-items: center;
       }
       @include media-breakpoint-down(md) {
         width: 50%;
@@ -136,26 +121,17 @@
         width: 100%;
         height: 500px;
         border-left: none;
-        background-color: rgba(0, 0, 0, 0.9);
+        background-color: rgba(0, 0, 0, 0.5);
         border-bottom: 1px dashed white;
-        padding-top: 15%;
+        padding-top: 20%;
       }
       li {
-        @include media-breakpoint-widescreen {
-          display: flex;
-          align-items: baseline;
-          justify-content: flex-end;
-          margin-bottom: 2px;
-          border: 1px solid transparent;
-        }
-        @media (min-width: 1200px) and (max-width: 1999px) {
-          display: flex;
-          align-items: baseline;
-          justify-content: flex-end;
-          margin-bottom: 2px;
-          border: 1px solid transparent;
-        }
-        @media (max-width: 1199px) {
+        display: flex;
+        align-items: baseline;
+        justify-content: flex-end;
+        margin-bottom: 2px;
+        border: 1px solid transparent;
+        @include media-breakpoint-down(lg) {
           border: none;
           height: 15%;
           display: flex;
@@ -164,50 +140,30 @@
           height: 10%;
         }
         @include media-breakpoint-down(sm) {
-          height: 45px;
+          margin-bottom: 0;
         }
         a {
-          @include media-breakpoint-widescreen {
-            color: gray;
-            display: flex;
-            padding-right: 0;
-            justify-content: flex-end;
-            align-items: baseline;
-          }
-          @media (min-width: 1200px) and (max-width: 1999px) {
-            color: gray;
-            display: flex;
-            padding-right: 0;
-            justify-content: flex-end;
-            align-items: baseline;
-          }
-          @media (max-width: 1199px) {
+          color: gray;
+          display: flex;
+          padding-right: 0;
+          justify-content: flex-end;
+          align-items: baseline;
+          @include media-breakpoint-down(lg) {
             width: 100%;
             height: 100%;
+            padding-right: 15px;
           }
           p {
             text-transform: uppercase;
             font-weight: 800;
-            @include media-breakpoint-widescreen {
-              opacity: 0;
-              margin: 0;
-              transform: translateX(10px);
-            }
-            @media (min-width: 1200px) and (max-width: 1999px) {
-              font-size: 1rem;
-              opacity: 0;
-              margin: 0;
-              transform: translateX(10px);
-            }
-
-            @media (min-width: 1200px) and (max-width: 1399px) {
-              display: none;
-            }
-            
-            @media (max-width: 1199px) {
+            opacity: 0;
+            margin: 0;
+            font-size: 1rem;
+            @include media-breakpoint-down(lg) {
               font-size: 2rem;
               font-weight: 600;
               color: white;
+              opacity: 1;
             }
             @include media-breakpoint-down(md) {
               font-size: 1.5rem;
@@ -217,23 +173,15 @@
             }
           }
           i {
+            color: #c0c6cc;
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 20px;
+            font-size: 1.3rem;
             &:hover {
               border: none;
             }
-            @include media-breakpoint-widescreen {
-              color: #c0c6cc;
-              padding-top: 0;
-              padding-bottom: 0;
-              padding-left: 20px;
-            }
-            @media (min-width: 1200px) and (max-width: 1999px) {
-              color: #c0c6cc;
-              padding-top: 0;
-              padding-bottom: 0;
-              padding-left: 20px;
-              font-size: 1.3rem;
-            }
-            @media (max-width: 1199px) {
+            @include media-breakpoint-down(lg) {
               display: none !important;
             }
           }
@@ -248,9 +196,7 @@
       .active p {
         opacity: 1;
         color: #474a7b;
-        transform: translateX(0);
         transition: all .3s ease-in-out;
-        display: block;
       }
       .active i {
         color: #474a7b;
@@ -271,7 +217,7 @@
     }
     .social {
       display: none;
-      @media (max-width: 1199px) {
+      @include media-breakpoint-down(lg) {
         position: absolute;
         height: 32%;
         width: 40%;
@@ -313,7 +259,7 @@
     }
     .infos {
       display: none;
-      @media (max-width: 1199px) {
+      @include media-breakpoint-down(lg) {
         position: absolute;
         width: 40%;
         height: 68%;
