--- a/app/styles/modules/_team.scss
+++ b/app/styles/modules/_team.scss
@@ -4,14 +4,8 @@
   height: auto;
   position: relative;
   z-index: 1;
-  @include media-breakpoint-up(xl) {
-    padding-top: 150px;
-    padding-bottom: 150px;
-  }
-  @include media-breakpoint-down(xl) {
-    padding-top: 150px;
-    padding-bottom: 150px;
-  }
+  padding-top: 150px;
+  padding-bottom: 150px;
   @include media-breakpoint-down(lg) {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -67,6 +61,7 @@
   }
   .contact {
     &__infos {
+      width: 100%;
       margin-top: 40px;
       text-align: center;
       display: flex;
