--- a/app/styles/modules/_global.scss
+++ b/app/styles/modules/_global.scss
@@ -29,7 +29,6 @@ p {
 a {
   color: white;
   text-decoration: none;
-  //font-size: 20px;
   &:hover {
     color: white;
     text-decoration: none;
@@ -63,6 +62,7 @@ p {
 
 .web-container {
   background: white;
+  overflow: hidden;
 }
 
 @include media-breakpoint-up(xs) {
