--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -92,6 +92,9 @@
       top: 50%;
       width: auto;
       right: 75px;
+      @media (min-width: 1198px) and (max-width: 1399px) {
+        right: 15px;
+      }
       @include media-breakpoint-down(lg) {
         display: flex;
         flex-direction: column;
