--- a/app/styles/modules/_carousel.scss
+++ b/app/styles/modules/_carousel.scss
@@ -55,6 +55,7 @@
       z-index: 1;
       @include media-breakpoint-down(sm) {
         font-size: 20px;
+        padding-left: 0;
       }
     }
     .video-element {
