--- a/app/styles/modules/_carousel.scss
+++ b/app/styles/modules/_carousel.scss
@@ -84,6 +84,7 @@
   height: 60px;
   background-color: black;
   border-radius: 0;
+  z-index: 2;
   @include media-breakpoint-down(sm) {
     width: 50px;
     height: 50px;
