--- a/app/styles/modules/_footer.scss
+++ b/app/styles/modules/_footer.scss
@@ -4,6 +4,7 @@
   padding-bottom: 20px;
   background-color: black;
   height: auto;
+  position: relative;
   &__first {
     padding-bottom: 150px;
     &__text {
