Added script for google analytics im header

--- a/app/styles/modules/_footer.scss
+++ b/app/styles/modules/_footer.scss
@@ -30,6 +30,9 @@
       @include media-breakpoint-down(sm) {
         line-height: 1.2;
       }
+      a {
+        font-weight: 600;
+      }
     }
   }
   &__second-right {
